projects/compiler/test/typechecker/typeidentifier/error_modalias_unknown_type.out
Error at %FILE_NAME%:3:10
Unknown exported name for aliased module
  |  val _: e.Bar[] = []
              ^
There's no exported value named 'Bar' in module aliased as 'e' at:
  |  import "./_exports" as e
                            ^
